sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value gnome
	while (!gnome) {
                ^AlgGnomeSort:11: error: value && is not a member of Unit
		if ((i=getNombreValeurs-1) && (plusPetit(i-1,i))) {
                                           ^